fixed password field type

--- a/login.html
+++ b/login.html
@@ -47,7 +47,7 @@
             <p class="formlabel">
                 Password
             </p>
-            <input type="text">
+            <input type="password">
             <br>
             <input type="submit" value="Log in" class="submit">
         </form>
